--- a/.ssh/config
+++ b/.ssh/config
@@ -1,3 +1,8 @@
+Host *
+  AddKeysToAgent yes
+  UseKeychain yes
+  IdentityFile ~/.ssh/id_rsa_2020
+
 Host sandbox
   HostName 35.197.8.80
   User xnutsive
