SSH: rename rp*.local to rpi*.local

--- a/.ssh/config
+++ b/.ssh/config
@@ -10,8 +10,8 @@ Host sandbox
   IdentityFile ~/.ssh/google_compute_engine
   ForwardAgent yes
 
-Host rp1.local
-  HostName rp1.local
+Host rpi1.local
+  HostName rpi1.local
   User pi
   IdentityFile ~/.ssh/xnutsive.id_rsa-2014-06-28
   ForwardAgent yes
