tmux.conf: tweaked work on linux and mac

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,6 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-set-option -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 set -g mouse on
 
@@ -68,13 +67,15 @@ bind C-l send-keys 'C-l'
 unbind -T copy-mode-vi             MouseDragEnd1Pane                                         # Don't copy on mouse release
 bind   -T copy-mode-vi v   send -X begin-selection                                           # Selection keybind
 bind   -T copy-mode-vi C-v send -X rectangle-toggle                                          # Toggle selection mode
-bind   -T copy-mode-vi y   send -X copy-pipe "reattach-to-user-namespace pbcopy" \; send -X clear-selection # Copy to clipboard
 
-bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe "reattach-to-user-namespace pbcopy" \; send -X clear-selection
 
-bind   -T copy-mode-vi y   send -X copy-pipe "reattach-to-user-namespace pbcopy" \; send -X clear-selection # Copy to clipboard
+if-shell "test -x (which reattach-to-user-namespace)"  '\
+  set-option -g default-command "reattach-to-user-namespace -l ${SHELL}" \
+  bind   -T copy-mode-vi y   send -X copy-pipe "reattach-to-user-namespace pbcopy" \; send -X clear-selection \
+  bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe "reattach-to-user-namespace pbcopy" \; send -X clear-selection \
+  bind   -T copy-mode-vi y   send -X copy-pipe "reattach-to-user-namespace pbcopy" \; send -X clear-selection \
+  bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"'
 
-bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # Try loading the tmuxline config:
 if-shell "test -f ~/.tmux-status.conf" "source ~/.tmux-status.conf"
