--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,6 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-
 set -g mouse on
 
 # manage windows
@@ -64,17 +63,28 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 # clear screen and scrollback history
 bind C-l send-keys 'C-l'
 
-unbind -T copy-mode-vi             MouseDragEnd1Pane                                         # Don't copy on mouse release
-bind   -T copy-mode-vi v   send -X begin-selection                                           # Selection keybind
-bind   -T copy-mode-vi C-v send -X rectangle-toggle                                          # Toggle selection mode
+set-window-option -g mode-keys vi
 
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel pbcopy
 
-if-shell "test -x (which reattach-to-user-namespace)"  '\
-  set-option -g default-command "reattach-to-user-namespace -l ${SHELL}" \
-  bind   -T copy-mode-vi y   send -X copy-pipe "reattach-to-user-namespace pbcopy" \; send -X clear-selection \
-  bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe "reattach-to-user-namespace pbcopy" \; send -X clear-selection \
-  bind   -T copy-mode-vi y   send -X copy-pipe "reattach-to-user-namespace pbcopy" \; send -X clear-selection \
-  bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"'
+# unbind -T copy-mode-vi             MouseDragEnd1Pane                                         # Don't copy on mouse release
+# bind   -T copy-mode-vi v   send -X begin-selection                                           # Selection keybind
+# bind   -T copy-mode-vi C-v send -X rectangle-toggle                                          # Toggle selection mode
+
+# if-shell "test -x (which reattach-to-user-namespace)"  '\
+#   bind-key [ copy-mode \
+#   bind-key ] paste-buffer \
+#   bind-key -T copy-mode-vi v send -X begin-selection \
+#   bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy" \
+#   unbind -T copy-mode-vi Enter \
+#   bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"'
+
+#   # set-option -g default-command "reattach-to-user-namespace -l ${SHELL}" \
+#   # bind   -T copy-mode-vi y   send -X copy-pipe "reattach-to-user-namespace pbcopy" \; send -X clear-selection \
+#   # bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe "reattach-to-user-namespace pbcopy" \; send -X clear-selection \
+#   # bind   -T copy-mode-vi y   send -X copy-pipe "reattach-to-user-namespace pbcopy" \; send -X clear-selection \
+#   # bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"'
 
 
 # Try loading the tmuxline config:
