--- a/.gitconfig
+++ b/.gitconfig
@@ -23,3 +23,47 @@
 	helper = osxkeychain
 [init]
 	defaultBranch = main
+
+# Delta is the diff output viewer
+#
+
+[pager]
+    diff = delta
+    log = delta
+    reflog = delta
+    show = delta
+
+[delta]
+    # plus-style = "syntax #012800"
+    #minus-style = "syntax #340001"
+    syntax-theme = base16-256
+    navigate = true
+    line-numbers = true
+    side-by-side = true
+    features = unobtrusive-line-numbers decorations
+    whitespace-error-style = 22 reverse
+
+[delta "unobtrusive-line-numbers"]
+    line-numbers = true
+    line-numbers-minus-style = "#444444"
+    line-numbers-zero-style = "#444444"
+    line-numbers-plus-style = "#444444"
+    line-numbers-left-format = "{nm:>4}┊"
+    line-numbers-right-format = "{np:>4}│"
+    line-numbers-left-style = blue
+    line-numbers-right-style = blue
+
+[interactive]
+    diffFilter = delta --color-only
+
+[delta "interactive"]
+    keep-plus-minus-markers = false
+
+[delta "decorations"]
+    commit-decoration-style = blue ol
+    commit-style = raw
+    file-style = omit
+    hunk-header-decoration-style = blue box
+    hunk-header-file-style = red
+    hunk-header-line-number-style = "#067a00"
+    hunk-header-style = file line-number syntax
