Update vimrc + tokyo night theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -86,6 +86,7 @@ bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel pbcopy
 #   # bind   -T copy-mode-vi y   send -X copy-pipe "reattach-to-user-namespace pbcopy" \; send -X clear-selection \
 #   # bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"'
 
+# set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Try loading the tmuxline config:
 if-shell "test -f ~/.tmux-status.conf" "source ~/.tmux-status.conf"
