tmux: fix terminal and scroll speed

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,8 +18,7 @@ set-option -g allow-rename off
 # Jump to window with Ctrl + index
 bind -n C-1 send-keys C-a 1
 
-set -g default-terminal "screen-256color"
-
+set -g default-terminal "xterm-256color"
 
 # split panes using | and -
 bind | split-window -h
@@ -86,7 +85,11 @@ bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel pbcopy
 #   # bind   -T copy-mode-vi y   send -X copy-pipe "reattach-to-user-namespace pbcopy" \; send -X clear-selection \
 #   # bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"'
 
-# set -ga terminal-overrides ",xterm-256color:Tc"
+
+bind -Tcopy-mode WheelUpPane send -N1 -X scroll-up
+bind -Tcopy-mode WheelDownPane send -N1 -X scroll-down
+
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Try loading the tmuxline config:
 if-shell "test -f ~/.tmux-status.conf" "source ~/.tmux-status.conf"
