GPG: gpg-agent config

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,14 +9,12 @@
 - link:
     ~/.tmux.conf:
       path: .tmux.conf
-    ~/.vim:
-      path: .vim
-    ~/.vimrc:
-      path: .vimrc
     ~/.gitconfig:
       path: .gitconfig
     ~/.config/:
       glob: true
       path: .config/*
+    ~/.gnupg/gpg-agent.conf:
+      path: gpg-agent.conf
 
 - shell: []
