INSTALL: Cleaned up unused configs

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -16,5 +16,7 @@
       path: .config/*
     ~/.gnupg/gpg-agent.conf:
       path: gpg-agent.conf
+    ~/.ansible.cfg:
+      path: .ansible.cfg
 
 - shell: []
