GPG: Improved gpg-agent survivability

--- a/gpg-agent.conf
+++ b/gpg-agent.conf
@@ -1,9 +1,8 @@
 allow-preset-passphrase
 pinentry-program /opt/homebrew/bin/pinentry-mac
 
-extra-socket $HOME/.gnupg/S.gpg-agent.extra
+extra-socket /Users/nategadzhi/.gnupg/S.gpg-agent.extra
 enable-ssh-support
+
 default-cache-ttl 600
 max-cache-ttl 7200
-keep-tty
-keep-display
