--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -18,6 +18,8 @@
       path: gpg-agent.conf
     ~/.ansible.cfg:
       path: .ansible.cfg
+    ~/.mackup.cfg:
+      path: .mackup.cfg
 
     # These two launchctl agents are only required on Mac OS
     # to make gpg-agent play nice with ssh auth in apps that don't start
