--- a/.mackup.cfg
+++ b/.mackup.cfg
@@ -1,3 +1,23 @@
 [storage]
-engine = icloud
+engine = file_system
+path = src/dotfiles
+directory = mackup
 
+# These applications are managed by dotfiles themselves, 
+# No need to re-link them to mackup
+[applications_to_ignore]
+tmux
+starship
+fish
+git
+vim
+neovim
+netrc
+yarn
+zsh
+mackup
+ssh
+gnupg
+ansible
+skhd
+yabai
