--- a/.gitconfig
+++ b/.gitconfig
@@ -6,9 +6,9 @@
 	default = matching
 	autoSetupRemote = true
 [github]
-	user = nategadzhi
+	user = natikgadzhi
 [ghi]
-	token = !security find-internet-password -a nategadzhi -s github.com -l 'ghi token' -w
+	token = !security find-internet-password -a natikgadzhgi -s github.com -l 'ghi token' -w
 [core]
 	editor = vim
 	autocrlf = false
