DOTBOT: Fixed install script with empty shell command

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -29,4 +29,4 @@
     ~/Library/LaunchAgents/link-ssh-auth-sock.plist:
       path: Library/LaunchAgents/link-ssh-auth-sock.plist
 
-- shell:
+- shell: []
