GPG: Don't run extra socket

--- a/gpg-agent.conf
+++ b/gpg-agent.conf
@@ -1,7 +1,7 @@
 allow-preset-passphrase
 pinentry-program /opt/homebrew/bin/pinentry-mac
 
-extra-socket /Users/natikgadzhi/.gnupg/S.gpg-agent.extra
+# extra-socket /Users/natikgadzhi/.gnupg/S.gpg-agent.extra
 enable-ssh-support
 
 default-cache-ttl 600
