Gitconfig name change

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = Nate Gadzhi
-	email = nate@respawn.io
+	name = Natik Gadzhi
+	email = natik@respawn.io
 	signingKey = 06A46263356EDAC3
 [push]
 	default = matching
