--- a/.config/iterm2/com.googlecode.iterm2.plist
+++ b/.config/iterm2/com.googlecode.iterm2.plist
@@ -3778,7 +3778,7 @@ Respond with one or more commands. Do not include any explanation or additional 
 	<key>SeparateWindowTitlePerTab</key>
 	<false/>
 	<key>ShowFullScreenTabBar</key>
-	<false/>
+	<true/>
 	<key>SoundForEsc</key>
 	<false/>
 	<key>StatusBarPosition</key>
