--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -4,6 +4,11 @@ set-option -g prefix C-x
 bind-key C-x send-prefix
 
 set -g mouse on
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
+
+# Set default shell to Fish. This won't work outside of brew environments.
+set-option -g default-shell /opt/homebrew/bin/fish
 
 # manage windows
 # Set base window index to 1 so they start from 1, not 0.
@@ -14,11 +19,8 @@ set -g base-index 1
 # don't rename windows automatically
 set-option -g allow-rename off
 
-
 # Jump to window with Ctrl + index
 bind -n C-1 send-keys C-a 1
-
-set -g default-terminal "xterm-256color"
 
 # split panes using | and -
 bind | split-window -h
@@ -89,7 +91,6 @@ bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel pbcopy
 bind -Tcopy-mode WheelUpPane send -N1 -X scroll-up
 bind -Tcopy-mode WheelDownPane send -N1 -X scroll-down
 
-set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Try loading the tmuxline config:
 if-shell "test -f ~/.tmux-status.conf" "source ~/.tmux-status.conf"
