TMUX: status line

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -29,7 +29,7 @@ unbind '"'
 unbind %
 
 # reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -94,3 +94,12 @@ bind -Tcopy-mode WheelDownPane send -N1 -X scroll-down
 
 # Try loading the tmuxline config:
 if-shell "test -f ~/.tmux-status.conf" "source ~/.tmux-status.conf"
+
+# STATUS LINE
+set -g status on
+set -g status-interval 1
+set -g status-justify centre # Careful! It is spelled "centre" not "center".
+set -g status-style fg=white,bg=black
+
+# Highlight the current window.
+setw -g window-status-current-style fg=black,bg=blue,bright
