TMUX: Install tmux.conf from xdg config directory

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,7 +8,7 @@
 
 - link:
     ~/.tmux.conf:
-      path: .tmux.conf
+      path: .config/tmux/.tmux.conf
     ~/.gitconfig:
       path: .gitconfig
     ~/.config/:
