--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@
 # Compiled nvim plugin bundle
 .config/nvim/plugin/packer_compiled.lua
 
+
+
 # Too noisy
 .tmux-status.conf
 .wget-hsts
@@ -21,6 +23,7 @@
 
 # Tide shites all over this file frequently, no need to save it then.
 .config/fish/fish_variables
+.config/fish/fishd*
 
 # Yarnrc is mostly useless to me
 .yarnrc
