KITTY: Basic configuration

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -968,7 +968,7 @@ tab_bar_edge bottom
 #: The second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-tab_bar_style powerline
+tab_bar_style separator
 
 #: The tab bar style, can be one of:
 
@@ -1039,7 +1039,7 @@ tab_powerline_style angled
 #: leading or trailing spaces, surround the text with quotes. See
 #: tab_title_template for how this is rendered.
 
-# tab_title_max_length 0
+tab_title_max_length 80
 
 #: The maximum number of cells that can be used to render the text in
 #: a tab. A value of zero means that no limit is applied.
@@ -1500,7 +1500,7 @@ tab_powerline_style angled
 #: special value of ask means that kitty will ask before opening the
 #: link when clicked.
 
-# shell_integration enabled
+shell_integration enabled
 
 #: Enable shell integration on supported shells. This enables features
 #: such as jumping to previous prompts, browsing the output of the
