MACKUP: Do not track Xcode and VSCode settings

--- a/.mackup.cfg
+++ b/.mackup.cfg
@@ -6,6 +6,8 @@ directory = mackup
 # These applications are managed by dotfiles themselves, 
 # No need to re-link them to mackup
 [applications_to_ignore]
+xcode
+vscode
 tmux
 starship
 fish
