--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -968,7 +968,7 @@ tab_bar_edge bottom
 #: The second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-tab_bar_style separator
+tab_bar_style powerline
 
 #: The tab bar style, can be one of:
 
@@ -1026,7 +1026,7 @@ tab_separator " "
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-tab_powerline_style angled
+tab_powerline_style slanted
 
 #: The powerline separator style between tabs in the tab bar when
 #: using powerline as the tab_bar_style, can be one of: angled,
@@ -1091,11 +1091,11 @@ tab_title_max_length 80
 #: Template to use for active tabs. If not specified falls back to
 #: tab_title_template.
 
-# active_tab_foreground   #000
-# active_tab_background   #eee
-# active_tab_font_style   bold-italic
-# inactive_tab_foreground #444
-# inactive_tab_background #999
+active_tab_foreground   #0087AF
+active_tab_background   #1C1C1C
+active_tab_font_style   bold
+inactive_tab_foreground #444
+inactive_tab_background #1C1C1C
 # inactive_tab_font_style normal
 
 #: Tab bar colors and styles.
