--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -9,7 +9,7 @@
 {
   "show_wrap_guides": true,
   "preferred_line_length": 100,
-  "theme": "One Dark Pro",
+  "theme": "Andromeda",
   "vim_mode": true,
   "ui_font_size": 16,
   "buffer_font_size": 16,
