--- a/.gitconfig
+++ b/.gitconfig
@@ -10,7 +10,7 @@
 [ghi]
 	token = !security find-internet-password -a natikgadzhgi -s github.com -l 'ghi token' -w
 [core]
-	editor = nvim
+	editor = zed --wait
 	autocrlf = false
 [filter "lfs"]
 	clean = git-lfs clean %f
