--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -7,14 +7,26 @@
 // custom settings, run the `open default settings` command
 // from the command palette or from `Zed` application menu.
 {
+  "assistant": {
+    "default_open_ai_model": "gpt-4o",
+    "provider": {
+      "name": "openai",
+      "default_model": "gpt-4o",
+      "available_models": []
+    }
+  },
+  "project_panel": {
+    "scrollbar": {
+      "show": "never"
+    }
+  },
   "show_wrap_guides": true,
   "preferred_line_length": 100,
-  "theme": "XY-Zed",
+  "theme": "Rosé Pine Moon",
   "vim_mode": true,
   "buffer_font_family": "JetBrains Mono",
-  "ui_font_size": 18,
-  "buffer_font_size": 16,
-  "active_pane_magnification": 1.1,
+  "ui_font_size": 16,
+  "buffer_font_size": 14,
   "git": {
     "git_gutter": "tracked_files",
     "gutter_debounce": 1000
@@ -25,6 +37,21 @@
       "on": {
         "directories": ["venv", ".venv"],
         "activate_script": "fish"
+      }
+    }
+  },
+  // Override formatting on Python using Ruff
+  "languages": {
+    "Python": {
+      "format_on_save": "on",
+      "formatter": {
+        "external": {
+          "command": "bash",
+          "arguments": [
+            "-c",
+            "ruff check --select=I --fix --stdin-filename {buffer_path} | ruff format --stdin-filename {buffer_path}"
+          ]
+        }
       }
     }
   }
