--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -8,7 +8,12 @@
 // from the command palette or from `Zed` application menu.
 {
   "assistant": {
-    "default_open_ai_model": "gpt-4o",
+    "default_model": {
+      "provider": "anthropic",
+      "model": "claude-3-5-sonnet-20240620"
+    },
+    "version": "2",
+    "default_open_ai_model": null,
     "provider": {
       "name": "openai",
       "default_model": "gpt-4o",
@@ -22,14 +27,15 @@
   },
   "show_wrap_guides": true,
   "preferred_line_length": 100,
-  "theme": "Rosé Pine Moon",
+  "theme": "One Dark Pro",
   "vim_mode": true,
-  "buffer_font_family": "JetBrains Mono",
+  // stock font is honestly pretty cool
+  // "buffer_font_family": "JetBrains Mono",
   "ui_font_size": 16,
-  "buffer_font_size": 14,
+  "buffer_font_size": 15,
   "git": {
     "git_gutter": "tracked_files",
-    "gutter_debounce": 1000
+    "gutter_debounce": 500
   },
   "terminal": {
     "font_family": "JetBrainsMono Nerd Font",
@@ -42,6 +48,9 @@
   },
   // Override formatting on Python using Ruff
   "languages": {
+    "Markdown": {
+      "format_on_save": "off"
+    },
     "Python": {
       "format_on_save": "on",
       "formatter": {
