--- a/gpg-agent.conf
+++ b/gpg-agent.conf
@@ -1,5 +1,5 @@
 allow-preset-passphrase
-pinentry-program pinentry-wrapper.sh
+pinentry-program /Users/natikgadzhi/.local/bin/pinentry-wrapper.sh
 
 # extra-socket /Users/natikgadzhi/.gnupg/S.gpg-agent.extra
 enable-ssh-support
