--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -20,7 +20,7 @@
     "button": false
   },
   "chat_panel": {
-    "button": false
+    "button": "when_in_call"
   },
   "notification_panel": {
     "button": false
@@ -32,7 +32,7 @@
   "vim_mode": true,
 
   // stock font is honestly pretty cool
-  // "buffer_font_family": "JetBrains Mono",
+  "buffer_font_family": "JetBrains Mono",
   "ui_font_size": 16,
   "buffer_font_size": 15,
 
@@ -70,7 +70,7 @@
 
   "assistant": {
     "default_model": {
-      "provider": "anthropic",
+      "provider": "zed.dev",
       "model": "claude-3-5-sonnet-latest"
     },
     "version": "2",
@@ -79,7 +79,8 @@
       "name": "openai",
       "default_model": "gpt-4o",
       "available_models": []
-    }
+    },
+    "enable_experimental_live_diffs": true
   },
 
   // Language-specific stuff
