--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,7 +1,7 @@
 # remap prefix from 'C-b' to 'C-a'
-unbind C-b
-set-option -g prefix C-x
-bind-key C-x send-prefix
+# unbind C-b
+# set-option -g prefix C-x
+# bind-key C-x send-prefix
 
 set -g mouse on
 set -g default-terminal "xterm-256color"
@@ -22,13 +22,14 @@ set-option -g allow-rename off
 # Jump to window with Ctrl + index
 bind -n C-1 send-keys C-a 1
 
-# split panes using | and -
-bind | split-window -h
-bind - split-window -v
+# split panes using v and h respectively
+# defaults are % and somethin
+bind v split-window -h
+bind h split-window -v
 unbind '"'
 unbind %
 
-# reload config file (change file location to your the tmux.conf you want to use)
+# reload config file on ctrl-b r
 bind r source-file ~/.config/tmux/tmux.conf
 
 # Smart pane switching with awareness of Vim splits.
@@ -64,42 +65,39 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 # clear screen and scrollback history
 bind C-l send-keys 'C-l'
 
+# Use vi key bindings in copy mode
 set-window-option -g mode-keys vi
 
+# Configure 'v' in copy mode to begin text selection, similar to Vim's visual mode
+# This allows selecting text with 'v' and then defining the selection area with movement keys
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel pbcopy
 
-# unbind -T copy-mode-vi             MouseDragEnd1Pane                                         # Don't copy on mouse release
-# bind   -T copy-mode-vi v   send -X begin-selection                                           # Selection keybind
-# bind   -T copy-mode-vi C-v send -X rectangle-toggle                                          # Toggle selection mode
+# Enable OSC 52 clipboard integration for terminal clipboard support
+set -g set-clipboard on
 
-# if-shell "test -x (which reattach-to-user-namespace)"  '\
-#   bind-key [ copy-mode \
-#   bind-key ] paste-buffer \
-#   bind-key -T copy-mode-vi v send -X begin-selection \
-#   bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy" \
-#   unbind -T copy-mode-vi Enter \
-#   bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"'
+# Update default binding of Enter to also use copy-pipe-and-cancel
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel pbcopy
 
-#   # set-option -g default-command "reattach-to-user-namespace -l ${SHELL}" \
-#   # bind   -T copy-mode-vi y   send -X copy-pipe "reattach-to-user-namespace pbcopy" \; send -X clear-selection \
-#   # bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe "reattach-to-user-namespace pbcopy" \; send -X clear-selection \
-#   # bind   -T copy-mode-vi y   send -X copy-pipe "reattach-to-user-namespace pbcopy" \; send -X clear-selection \
-#   # bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"'
+# Mouse-based copy operations
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel pbcopy
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
+# Double-click to select word and copy
+bind-key -T root DoubleClick1Pane select-pane \; copy-mode \; send-keys -X select-word \; send-keys -X copy-pipe-and-cancel pbcopy
 
-bind -Tcopy-mode WheelUpPane send -N1 -X scroll-up
-bind -Tcopy-mode WheelDownPane send -N1 -X scroll-down
+# Triple-click to select line and copy
+bind-key -T root TripleClick1Pane select-pane \; copy-mode \; send-keys -X select-line \; send-keys -X copy-pipe-and-cancel pbcopy
 
-
-# Try loading the tmuxline config:
-if-shell "test -f ~/.tmux-status.conf" "source ~/.tmux-status.conf"
+bind -T copy-mode WheelUpPane send -N1 -X scroll-up
+bind -T copy-mode WheelDownPane send -N1 -X scroll-down
 
 # STATUS LINE
 set -g status on
 set -g status-interval 1
-set -g status-justify centre # Careful! It is spelled "centre" not "center".
-set -g status-style fg=white,bg=black
+# set -g status-justify left # Careful! It is spelled "centre" not "center".
+set -g status-style fg=white
 
 # Highlight the current window.
 setw -g window-status-current-style fg=black,bg=blue,bright
