Tmux: Shift+Option+[/] to navigate windows

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -19,8 +19,13 @@ set -g base-index 1
 # don't rename windows automatically
 set-option -g allow-rename off
 
+# Navigate windows with Alt + [ and Alt + ]
+bind -n M-S-[ previous-window
+bind -n M-S-] next-window
+
 # Jump to window with Ctrl + index
 bind -n C-1 send-keys C-a 1
+
 
 # split panes using v and h respectively
 # defaults are % and somethin
