--- a/gpg-agent.conf
+++ b/gpg-agent.conf
@@ -1,8 +1,6 @@
 allow-preset-passphrase
-pinentry-program /Users/natikgadzhi/.local/bin/pinentry-wrapper.sh
+pinentry-program /Users/natikgadzhi/.gnupg/pinentry-ide.sh
 
-# extra-socket /Users/natikgadzhi/.gnupg/S.gpg-agent.extra
 enable-ssh-support
-
 default-cache-ttl 600
 max-cache-ttl 7200
