--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -20,8 +20,8 @@ set -g base-index 1
 set-option -g allow-rename off
 
 # Navigate windows with Alt + [ and Alt + ]
-bind -n M-S-[ previous-window
-bind -n M-S-] next-window
+bind -n M-\{ previous-window
+bind -n M-\} next-window
 
 # Jump to window with Ctrl + index
 bind -n C-1 send-keys C-a 1
@@ -69,6 +69,7 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 # clear screen and scrollback history
 bind C-l send-keys 'C-l'
+bind -n C-k send-keys 'clear' C-m
 
 # Use vi key bindings in copy mode
 set-window-option -g mode-keys vi
