--- a/gpg-agent.conf
+++ b/gpg-agent.conf
@@ -1,6 +1,1 @@
-allow-preset-passphrase
-pinentry-program /Users/natikgadzhi/.gnupg/pinentry-ide.sh
-
-enable-ssh-support
-default-cache-ttl 600
-max-cache-ttl 7200
+pinentry-program /opt/homebrew/bin/pinentry
