--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -10,8 +10,8 @@
 {
   "assistant": {
     "default_model": {
-      "provider": "openai",
-      "model": "deepseek-v3-0324"
+      "provider": "zed.dev",
+      "model": "claude-3-7-sonnet-latest"
     },
     "version": "2"
   },
