zed: default model

--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -13,7 +13,7 @@
     "always_allow_tool_actions": true,
     "default_model": {
       "provider": "zed.dev",
-      "model": "claude-3-7-sonnet-latest"
+      "model": "claude-sonnet-4-latest"
     },
     "version": "2"
   },
