--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -13,7 +13,7 @@
     "always_allow_tool_actions": true,
     "default_model": {
       "provider": "zed.dev",
-      "model": "claude-sonnet-4-latest"
+      "model": "claude-sonnet-4"
     },
     "version": "2"
   },
@@ -25,7 +25,7 @@
     },
     "enabled_in_text_threads": false
   },
-  "theme": "Ayu Mirage",
+  "theme": "Flexoki Dark",
   "icon_theme": "Colored Zed Icons Theme Dark",
   "features": {
     "edit_prediction_provider": "zed"
