--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -13,7 +13,7 @@
     "always_allow_tool_actions": true,
     "default_model": {
       "provider": "zed.dev",
-      "model": "claude-sonnet-4"
+      "model": "claude-opus-4"
     },
     "version": "2"
   },
@@ -108,6 +108,11 @@
   //
   // PyLSP is disabled later on pylsp with Python and use mypy.
   "lsp": {
+    "biome": {
+      "require_config_file": true,
+      "config_path": "./biome.json"
+    },
+
     "pylsp": {
       "settings": {
         "plugins": {
