--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -10,6 +10,9 @@ set -ga terminal-overrides ",xterm-256color:Tc"
 # Set default shell to Fish. This won't work outside of brew environments.
 set-option -g default-shell /opt/homebrew/bin/fish
 
+set-option -s extended-keys always
+set-option -as terminal-features 'xterm*:extkeys'
+
 # manage windows
 # Set base window index to 1 so they start from 1, not 0.
 bind c new-window -c "#{pane_current_path}"
