--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -13,7 +13,7 @@
     "always_allow_tool_actions": true,
     "default_model": {
       "provider": "zed.dev",
-      "model": "claude-opus-4"
+      "model": "claude-sonnet-4"
     },
     "version": "2"
   },
