--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -9,11 +9,15 @@
 
 {
   "agent": {
+    "inline_assistant_model": {
+      "provider": "zed.dev",
+      "model": "claude-sonnet-4"
+    },
     "default_profile": "write",
     "always_allow_tool_actions": true,
     "default_model": {
       "provider": "zed.dev",
-      "model": "claude-sonnet-4"
+      "model": "claude-sonnet-4-thinking"
     },
     "version": "2"
   },
