--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -21,7 +21,7 @@
     },
   },
   "edit_predictions": {
-    "mode": "subtle",
+    "mode": "eager",
     "copilot": {
       "proxy": null,
       "proxy_no_verify": null
