--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -15,10 +15,10 @@ font-family = "JetBrains Mono"
 font-size = 16
 
 # Try `xcodedarkhc` for higher contrast
-# theme = "Flexoki Dark"
+theme = "Ayu"
 cursor-style = underline
 
-quick-terminal-position = center
+quick-terminal-position = top
 quick-terminal-autohide = true
 
 initial-window = false
