--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -8,6 +8,37 @@
 // from the command palette or from `Zed` application menu.
 
 {
+  "preview_tabs": {
+    "enable_preview_from_file_finder": false
+  },
+  "tabs": {
+    "file_icons": false,
+    "git_status": true
+  },
+  "title_bar": {
+    "show_menus": false,
+    "show_user_picture": false,
+    "show_onboarding_banner": false,
+    "show_project_items": true,
+    "show_branch_icon": false
+  },
+  "debugger": {
+    "button": false
+  },
+  "search": {
+    "button": false
+  },
+  "diagnostics": {
+    "button": true
+  },
+  "telemetry": {
+    "diagnostics": false,
+    "metrics": false
+  },
+  "redact_private_values": false,
+  "inlay_hints": {
+    "enabled": true
+  },
   "agent": {
     "inline_assistant_model": {
       "provider": "zed.dev",
@@ -28,14 +59,23 @@
     },
     "enabled_in_text_threads": false
   },
-  "theme": "Ayu Dark",
-  "icon_theme": "Colored Zed Icons Theme Dark",
+  "theme": {
+    "mode": "dark",
+    "light": "Ayu Light",
+    "dark": "Ayu Dark"
+  },
+  "icon_theme": {
+    "mode": "system",
+    "light": "Colored Zed Icons Theme Dark",
+    "dark": "Colored Zed Icons Theme Dark"
+  },
   "features": {
     "edit_prediction_provider": "zed"
   },
-  "base_keymap": "VSCode",
+  "base_keymap": "Cursor",
 
   "project_panel": {
+    "button": true,
     "scrollbar": {
       "show": "never"
     }
@@ -79,6 +119,9 @@
   },
 
   "terminal": {
+    "shell": {
+      "program": "/opt/homebrew/bin/fish"
+    },
     "font_family": "JetBrainsMono Nerd Font",
     "detect_venv": {
       "on": {
